color flipper with profile card mix

--- a/color-flipper/challenge/profile-card/index.html
+++ b/color-flipper/challenge/profile-card/index.html
@@ -50,6 +50,12 @@
         </div>
       </div>
     </div>
+    <div class="color-flipper">
+      <h2>background color : <span class="color">#f4f4f4</span></h2>
+      <h2>card color : <span class="card-color">#fff</span></h2>
+      <button class="btn btn-hero" id="card-btn">Card Color</button>
+      <button class="btn btn-hero" id="background-btn">Background Color</button>
+    </div>
 	<script src="hex.js"></script>
   </body>
 </html>
