challenge make the card rotation feature clickable

--- a/Counter/Challenge/index.html
+++ b/Counter/Challenge/index.html
@@ -10,7 +10,7 @@
   <body>
     <section>
       <div class="container">
-        <div class="card front-face">
+        <div class="card front-face" id="front">
           <header>
             <span class="logo">
               <img src="Screenshot 2023-07-25 at 12.18.30.png" alt="" />
@@ -32,7 +32,7 @@
           </div>
         </div>
 
-        <div class="card back-face">
+        <div class="card back-face" id="back">
           <h6>
             For customer service call +447982922555 or email me fakeemail@hotmail.com 
           </h6>
@@ -46,5 +46,6 @@
         </div>
       </div>
     </section>
+    <script src="app.js"></script>
   </body>
 </html>
