--- a/color-flipper/example/hex.html
+++ b/color-flipper/example/hex.html
@@ -14,6 +14,7 @@
   <body>
     <nav>
       <div class="nav-center">
+        <button></button>
         <h4>color flipper</h4>
         <ul class="nav-links">
           <li><a href="index.html">simple</a></li>
