made a modal appear based on click but doesnt look good

--- a/questions/challenge/index.html
+++ b/questions/challenge/index.html
@@ -9,6 +9,17 @@
   </head>
 
   <body>
+    <div class="modal">
+      <div class="overlay"></div>
+      <div class="modal-content"> 
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+         Sunt laudantium nisi, nam recusandae esse rem iure ab nihil ipsa 
+         culpa sint molestias consectetur! Quidem, quis.
+        </p>
+        <button class="close-modal">Close</button>
+        </div>
+    </div>
     <div class="main_box">
       <input type="checkbox" id="check">
       <div class="btn_one">
@@ -29,25 +40,70 @@
         <ul>
           <li class=""><i class="fas fa-qrcode"></i>
             <a href="#">Dashboard</a>
+            <div class="question-text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+                 tenetur quibusdam? Voluptate nulla asperiores laborum mollitia quidem,
+                 minima, ipsum ex fuga, quo debitis voluptatem dicta.</p>
+            </div>
           </li>
           <li>
             <i class="fas fa-link"></i>
             <a href="#">Shortcuts</a>
+            <div class="question-text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+                 tenetur quibusdam? Voluptate nulla asperiores laborum mollitia quidem,
+                 minima, ipsum ex fuga, quo debitis voluptatem dicta.</p>
+            </div>
           </li>
           <li>
             <i class="fas fa-stream"></i>
             <a href="#">Overview</a>
+            <div class="question-text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+                 tenetur quibusdam? Voluptate nulla asperiores laborum mollitia quidem,
+                 minima, ipsum ex fuga, quo debitis voluptatem dicta.</p>
+            </div>
           </li>
           <li><a href="#"><i class="fas fa-calendar-week"></i>
-            Events</a></li>
+            Events</a>
+            <div class="question-text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+                 tenetur quibusdam? Voluptate nulla asperiores laborum mollitia quidem,
+                 minima, ipsum ex fuga, quo debitis voluptatem dicta.</p>
+            </div>
+          </li>
           <li><a href="#"><i class="fas fa-question-circle"></i>
-            About</a></li>
+            About</a>
+            <div class="question-text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+                 tenetur quibusdam? Voluptate nulla asperiores laborum mollitia quidem,
+                 minima, ipsum ex fuga, quo debitis voluptatem dicta.</p>
+            </div>
+          </li>
           <li><a href="#"><i class="fas fa-sliders-h"></i>
-            Services</a></li>
+            Services</a>
+            <div class="question-text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+                 tenetur quibusdam? Voluptate nulla asperiores laborum mollitia quidem,
+                 minima, ipsum ex fuga, quo debitis voluptatem dicta.</p>
+            </div>
+          </li>
           <li><a href="#"><i class="fas fa-phone-volume"></i>
-            Contact</a></li>
+            Contact</a>
+            <div class="question-text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+                 tenetur quibusdam? Voluptate nulla asperiores laborum mollitia quidem,
+                 minima, ipsum ex fuga, quo debitis voluptatem dicta.</p>
+            </div>
+          </li>
           <li><a href="#"><i class="fas fa-comments"></i>
-            Feedback</a></li>
+            Feedback</a>
+            <div class="question-text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+                 tenetur quibusdam? Voluptate nulla asperiores laborum mollitia quidem,
+                 minima, ipsum ex fuga, quo debitis voluptatem dicta.</p>
+            </div>
+          </li>
         </ul>
         </div>
       
